# HbbJetPrunPlots

./: CMakeLists.txt  README.md  setup.sh
apps/: CMakeLists.txt  fit_comp.cpp  performance_graph.cpp
data/: perf_fid.txt  perf_inc.txt
inc/HbbJetPrunPlots/: Helpers.h  Record.h
src/: Helpers.cpp  Record.cpp
